# LocalLLM-IP-Factory

./: .gitignore  CLAUDE.md  NAS_MOUNT.md  PROJECT_MAP.example.md  PROJECT_MAP.md  README.md  pyproject.toml
.trae/documents/: sanitize-git-and-paths.md
config/: .env.example  rubric.py  series_definitions.py  series_schema.json  settings.py
data/: seed_pool.json
data/queue/: cards.json  cards.json.bak
data/source_cache/shared/: B_001_cat_kneading_purring.txt  B_001_dog_domestication_origin.md  M_002_button_layout.md  (+64 more)
data/source_registry/: index.json
demo_data/: example_document.txt
docs/: SERIES_TOPICS.example.md  V3_DESIGN.md
legacy/: cards_v2.json  fix_card_status.py  gen_batch2.py  gen_cards_batch.py  register_sources.py
output/: config.html  dashboard.html
scripts/: auto_dispatch.py  check_local_files.py  config_api.py  daemon.sh  generate_and_dispatch.py  import_series_names.py  lock.sh  migrate_paths.py  nas_start.sh  pipeline_all.sh  push_to_nas.py  reset_all.py  seed_generator.py  translate_sources.py  unlock.sh  watchdog.sh
src/: main.py
src/io/: cache.py  source_downgrader.py  source_registry.py  source_validator.py  store.py
src/knowledge/: context.py  graph.py  semantic.py
src/models/: client.py  gateway.py
src/pipeline/: card_state.py  orchestrator.py  seed_diversity.py  series_expansion.py
src/quality/: checkers.py  gate.py  metrics.py  reporter.py  seed_gate.py  source_tracer.py
src/skills/: push-to-nas.md  seed-generate.md  source-dispatch.md
src/utils/: id_assigner.py  logging.py  validators.py
tests/: conftest.py
(+14 files in other folders)
