[project]
name = "miaoyanwangyu"
version = "3.0.1"
description = "喵言汪语 · 自动化内容创作流水线 — 为行为学硬件配套的科普/IP内容矩阵"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.scripts]
miao = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
