[project]
name = "local-llm-ip-factory"
version = "3.1.0"
description = "自动化内容创作流水线 — 为垂直领域配套的科普/IP内容矩阵"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.scripts]
llmip = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
